# couchdb

./: .asf.yaml  .credo.exs  .dockerignore  .elp.toml  .formatter.exs  .gitattributes  .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  AUTHORS  BUGS  BUGS.md  BUILDING  CHANGES  CHANGES_SUMMARY.md  COMMITTERS  COMMITTERS.md  CONTRIBUTING.md  CONTRIBUTORS.in  DEVELOPERS  DEVELOPMENT  Dockerfile  FDB_NOTES.md  INSTALL.Unix  INSTALL.Unix.md  INSTALL.Windows  INSTALL.Windows.md  INSTALL.md  Jenkinsfile  KNOWN_ISSUES  LICENCE  LICENSE  Makefile  Makefile.am  Makefile.win  NEWS  NOTICE  PR_DESCRIPTION.md  README  (+134 more)
etc/: Makefile.am  couch.ini.tpl.in  couch_httpd.conf.tpl.in
etc/conf/: mime.types
etc/couchdb/: Makefile.am  couch.ini.tpl.in  couch_httpd.conf.tpl.in  default.ini.tpl.in  local.ini  local_dev.ini
etc/default/: couchdb.tpl.in
etc/init/: couchdb.tpl.in
etc/launchd/: org.apache.couchdb.plist.tpl.in
etc/logrotate.d/: Makefile.am  couchdb.tpl.in
etc/windows/: README.txt.tpl  couchdb.iss.tpl
priv/: Makefile.am  stat_descriptions.cfg  stat_descriptions.cfg.in  stats_descriptions.cfg
priv/couch_ejson_compare/: couch_ejson_compare.c
priv/couch_js/: help.h  http.c  http.h  jscompat.h  main.c  sm170.c  sm180.c  sm185.c  utf8.c  utf8.h  util.c  util.h
priv/icu_driver/: couch_icu_driver.c
share/: Makefile.am
share/doc/: Makefile.am
share/server/: action.js  coffee-script.js  dispatch-quickjs.js  dreyfus.js  filter.js  loop.js  main-deno.js  main.js  mainjs.sh  mimeparse.js  nouveau.js  render.js  rewrite_fun.js  sha256.js  state.js  util.js  validate.js  views.js
share/www/: _sidebar.html  config.html  couch_tests.html  custom_test.html  database.html  document.html  index.html  plugins.html  replicator.html  session.html  shell.html  status.html  verify_install.html
src/: Makefile  Makefile.am  bootstrap_manager.erl  bootstrap_receiver.erl  chttpd.app.src  chttpd.erl  chttpd_app.erl  chttpd_auth.erl  chttpd_auth_cache.erl  chttpd_auth_request.erl  chttpd_config_listener.erl  chttpd_cors.erl  chttpd_csrf.erl  chttpd_db.erl  chttpd_external.erl  chttpd_handlers.erl  chttpd_httpd_handlers.erl  chttpd_misc.erl  chttpd_oauth.erl  chttpd_plugin.erl  chttpd_rewrite.erl  chttpd_server.erl  chttpd_show.erl  chttpd_stats.erl  chttpd_sup.erl  chttpd_test_util.erl  chttpd_view.erl  clouseau_rpc.erl  cluster_ops.erl  config.erl  config_app.erl  config_event.erl  config_listener.erl  config_sup.erl  configuration.erl  couch.app.src  couch.app.src.script  couch.app.tpl.in  couch.erl  couch_api_wrap.erl  (+402 more)
src/aegis/: rebar.config.script
src/b64url/: .gitignore  README.md  benchmark.sh  rebar.config
src/chttpd/: .travis.yml  README.md
src/config/: .gitignore  Makefile.am  rebar.config
src/couch/: .gitignore  .travis.yml  LICENSE  Makefile.am  rebar.config.script
src/couch_dbupdates/: LICENSE  Makefile.am  NOTICE  README.md
src/couch_dist/: .gitignore  LICENSE  README.md  gen_certs
src/couch_epi/: .gitignore  README.md  rebar.config
src/couch_eval/: README.md
src/couch_event/: .gitignore  README.md  rebar.config
src/couch_expiring_cache/: .suppressed  README.md
src/couch_index/: .travis.yml  Makefile.am
src/couch_inets/: Makefile.am  couch_inets.app  ftp.erl  ftp_internal.hrl  ftp_progress.erl  ftp_response.erl  ftp_sup.erl  http.erl  http_base_64.erl  http_chunk.erl  http_cookie.erl  http_internal.hrl  http_request.erl  http_response.erl  http_transport.erl  http_uri.erl  http_util.erl  httpc_handler.erl  httpc_internal.hrl  httpc_manager.erl  httpc_request.erl  httpc_response.erl  httpc_sup.erl  httpd.erl  httpd.hrl  httpd_acceptor.erl  httpd_acceptor_sup.erl  httpd_cgi.erl  httpd_conf.erl  httpd_esi.erl  httpd_example.erl  httpd_instance_sup.erl  httpd_manager.erl  httpd_misc_sup.erl  httpd_request.erl  httpd_request_handler.erl  httpd_response.erl  httpd_script_env.erl  httpd_socket.erl  httpd_sup.erl  (+35 more)
src/couch_jobs/: .gitignore  README.md
src/couch_js/: README.md
src/couch_lib/: .gitignore  README.md
src/couch_log/: .gitignore  .travis.yml  LICENSE
src/couch_mrview/: .travis.yml  Makefile.am
src/couch_peruser/: .gitignore  README.md
src/couch_plugins/: Makefile.am  README.md
src/couch_quickjs/: .gitignore  build_js.escript  rebar.config.script  run_test262_tests.sh  update.sh  update_and_apply_patches.sh  update_patches.sh
src/couch_rate/: README.md
src/couch_replicator/: .gitignore  COMPRESSION_CONFIG.md  Makefile.am  README.md  rebar.config
src/couch_scanner/: README.md
src/couch_srt/: README.md  rebar.config.script
src/couch_stats/: .gitignore  CSRT.md  README.md
src/couch_tests/: .gitignore  rebar.config
src/couch_views/: README.md
src/couchdb/: Makefile.am  cjson.erl  couch.app.tpl.in  couch_api_wrap.erl  couch_api_wrap_httpc.erl  couch_app.erl  couch_auth_cache.erl  couch_batch_save.erl  couch_batch_save_sup.erl  couch_btree.erl  couch_changes.erl  couch_compaction_daemon.erl  couch_compress.erl  couch_config.erl  couch_config_writer.erl  couch_cors_policy.erl  couch_db.erl  couch_db.hrl  couch_db_update_notifier.erl  couch_db_update_notifier_sup.erl  couch_db_updater.erl  couch_doc.erl  couch_drv.erl  (+69 more)
test/: 002-replication-compact.t  01-basic-behavior.t  01-config-default.ini  01-index-crud-test.py  01-load.t  01-url-exists-test.py  02-basic-find-test.py  02-crud-insert-test.py  02-httpc-pool.t  02-lru-options.t  02-map-views.t  03-crud-find-test.py  03-limit-max-objects.t  03-operator-test.py  03-red-views.t  03-replication-compact.t  04-crud-update-test.py  04-empty-selectors-test.py  04-index-info.t  04-key-tests.py  04-limit-max-size.t  04-replication-large-atts.t  05-collation.t  05-index-selection-test.py  05-limit-lifetime.t  05-replication-many-leaves.t  06-basic-text-test.py  06-doc-missing-stubs.t  06-text-default-field-test.py  07-compact-swap.t  07-text-custom-field-list-test.py  07-use-checkpoints.t  08-changes_since.t  08-text-limit-test.py  09-index-events.t  09-text-sort-test.py  10-disable-array-length-field-test.py  10-index-changes.t  Emakefile  Makefile  (+126 more)
utils/: Makefile.am
(+4631 files in other folders)
